<resources>
    <string name="app_name">Twitter Client</string>
    <string name="text" />
    <string name="user" />
    <string name="screen_name" />
    <string name="createdAt" />
    <string name="created_at" />
    <string name="name" />
    <string name="search">SEARCH</string>
    <string name="tweets">0 tweets</string>
    <string name="following">0 following</string>
    <string name="follower">0 followers</string>
    <string name="authorize_btn_text">Login</string>
    <string name="tweeten">TWEETEN</string>
    <string name="maximale_tekens">140 characters max</string>
    <string name="follow">FOLLOW</string>
    <string name="unfollow">UNFOLLOW</string>
    <string name="logout">LOG OUT</string>
</resources>
