<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    >


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="15dp"
        android:paddingRight="4dp"
        android:text="@string/name"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/screen_name"
        android:layout_width="80dp"
        android:layout_height="22dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/name"
        android:paddingRight="4dp"
        android:paddingTop="2dp"
        android:text="@string/screen_name"
        android:textSize="15dp" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/tweet"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="7dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/created_at"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="15dp"
        android:text="@string/created_at"
        android:textSize="10dp" />

</RelativeLayout>