<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activity.ProfileActivity">

    <ImageView
        android:id="@+id/profile_banner"
        android:layout_width="match_parent"
        android:background="#EFEEEC"
        android:layout_height="100dp" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/profile_banner"
        android:layout_marginTop="30dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/profile_image"
        android:layout_below="@+id/profile_image"
        android:paddingLeft="10dp"
        android:text="New Text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_screen_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/profile_name"
        android:layout_below="@+id/profile_name"
        android:paddingLeft="10dp"
        android:paddingBottom="2dp"
        android:text="New Text" />

    <TextView
        android:id="@+id/profile_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/profile_screen_name"
        android:layout_below="@+id/profile_screen_name"
        android:padding="10dp" />

    <TextView
        android:id="@+id/profile_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_description"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:text="@string/following" />

    <TextView
        android:id="@+id/profile_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_description"
        android:layout_toEndOf="@+id/profile_following"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:text="@string/follower" />

    <TextView
        android:id="@+id/profile_amount_tweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_description"
        android:layout_toEndOf="@id/profile_followers"
        android:paddingBottom="10dp"
        android:paddingStart="15dp"
        android:text="@string/tweets" />

    <ListView
        android:id="@+id/profile_statuses_user_show"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile_following" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow"
        android:id="@+id/follow_btn"
        android:layout_above="@+id/profile_screen_name"
        android:layout_toStartOf="@+id/btn_destroy" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unfollow"
        android:id="@+id/btn_destroy"
        android:layout_alignTop="@+id/follow_btn"
        android:layout_alignParentEnd="true" />


</RelativeLayout>